# social-media-cli-simulator

./: CMakeLists.txt  README.md  posts.txt  semester.cpp  users.txt
include/: App.h  Person.h  Post.h
socialmedia/include/: App.h  FileHandler.h  User.h  path.txt
socialmedia/src/: App.cpp  Person.cpp  User.cpp  main.cpp
src/: Filehandler.cpp  Post.cpp
